# image-save-webui

./: Cargo.toml  index.html  package-lock.json  package.json
src/: add_image.rs  app.rs  banner.rs  find_image.rs  main.rs  utils.rs
src/scripts/: wallet.js
