[package]
name = "image-save-webui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
serde = { version = "1.0.193", features = ["derive"] }
solana-client-wasm = "1.17.4"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
